projects/01_chat_app/full_stack_chatApp/k8s/backend.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: chat-app
    tier: backend
  ports:
    - protocol: TCP
      port: 5001  
      targetPort: 5001
  type: ClusterIP  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend
  namespace: chat-app
  labels:
    app:  chat-app
    tier: backend
spec:
  selector:
    matchLabels:
        app: chat-app
        tier: backend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-app
        tier: backend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  backend
        image:  hardik002/chatapp-backend:latest
        ports:
        - containerPort:  5001
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        startupProbe:
          httpGet: 
            path: /health
            port: 5001
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 30

        livenessProbe:
          tcpSocket:
            port: 5001
          initialDelaySeconds: 25
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5001
          initialDelaySeconds: 25
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
